--- a/games.yaml
+++ b/games.yaml
@@ -4,6 +4,9 @@
 # http://osgameclones.com/
 # http://peyre.x10.mx/GWBASIC/index.htm
 # https://archive.org/details/gamesourcecode
+# http://cvsweb.openbsd.org/cgi-bin/cvsweb/src/games/
+# http://cvsweb.netbsd.org/bsdweb.cgi/src/games/
+# https://github.com/ctdk/bsdgames-osx
 
 - name: Apple Trek
   url: http://peyre.x10.mx/GWBASIC/index.htm#AppleTrek
@@ -16,17 +19,17 @@
   info: 0verkill is bloody 2D action deathmatch-like game in ASCII-ART.
   screencast:
 
-- name: Abura Tan
+- name: abura tan
   url: http://aburatan.sourceforge.net/
-  info: "A roguelike game of Cowboy Knights and Lurking Horror."
+  info: A roguelike game of Cowboy Knights and Lurking Horror.
   screencast:
 
-- name: Ad Astra
+- name: ad astra
   url: https://code.google.com/p/ad-astra-game/
   info: Ad Astra is a turn-based space strategy game written in Python that uses curses for its display.
   screencast:
 
-- name: Ambassador of Pain (aop)
+- name: ambassador of pain (aop)
   url: http://aop.raffi.at/
   info: A very nice and challenging arcade game.
   screencast: https://asciinema.org/a/34678
@@ -46,9 +49,10 @@
   info: Angband is a free, single-player dungeon exploration game.
   screencast:
 
-- name: adventure
-  url: ftp://ftp.simtreas.ru/pub/download/add/adventur.tgz
-  info:
+#ftp://ftp.simtreas.ru/pub/download/add/adventur.tgz
+- name: adventure (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/adventure.6?query=adventure
+  info: an exploration game.
   screencast:
 
 - name: "ADOM (Ancient Domains of Mystery)"
@@ -76,6 +80,11 @@
   info: asciisector is a free space combat/exploration/trading game.
   screencast:
   play:
+
+- name: atc (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/atc.6?query=atc
+  info: air traffic controller game.
+  screencast:
 
 - name: avanor
   url:
@@ -107,15 +116,13 @@
   play:
   wikipedia: https://en.wikipedia.org/wiki/Boulder_Dash
 
-# FIXME: add bsd games
-
 - name: battleships
   url: http://www.catb.org/~esr/bs/
   info: Uses character-cell graphics with a visual point-and-shoot interface.
   screencast:
 
 - name: backgammon (bsdgames)
-  url:
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/backgammon.6?query=backgammon
   info: A backgammon game; you can play against the computer.
   screencast:
 
@@ -145,15 +152,38 @@
   info: A nice version of the mastermind game.
   screencast:
 
+- name: battlestar (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/battlestar.6?query=battlestar
+  info: a tropical adventure game.
+  screencast:
+  play:
+
 - name: bj
   url:
   info: a black-jack card game.
   screencast:
   play: telnet or ssh on sdf.org
 
+- name: boggle (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/boggle.6?query=boggle
+  info: word search game.
+  screencast:
+  play:
+
+- name: bs (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/bs.6?query=bs
+  info: battleships game.
+  screencast:
+  play:
+
 - name: cataclysm
   url: https://web.archive.org/web/20130212063150/http://whalesdev.com/wiki/index.php?title=Main_Page
   info: A Zombie Survival Roguelike.
+  screencast:
+
+- name: canfield (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/canfield.6?query=canfield
+  info: the solitaire card game canfield.
   screencast:
 
 - name: canfield (bsdgame)
@@ -262,6 +292,11 @@
   info: One of the best games for the Linux console.
   screencast:
 
+- name: cribbage (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/cribbage.6?query=cribbage
+  info: the card game cribbage.
+  screencast:
+
 - name: cryptrover
   url: https://code.google.com/p/cryptrover/
   info: Escape From The Crypt.
@@ -330,6 +365,11 @@
   info: Encircled is a roguelike game.
   screencast:
 
+- name: fish (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/fish.6?query=fish
+  info: play ``Go Fish''.
+  screencast:
+
 - name: freecell
   url: http://www.linusakesson.net/software/freecell.php
   info: This is a console (ncurses) version of the popular and addictive solitaire game.
@@ -391,7 +431,7 @@
   screencast:
 
 - name: gomoku (bsdgames)
-  url:
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/gomoku.6?query=gomoku
   info: Gomoku is a two player game where the object is to get 5 in a row horizontally, vertically or diagonally on a 19 by 19 grid.
   screencast:
 
@@ -417,10 +457,16 @@
   screencast:
 
 - name: hack (bsdgames)
-  url:
-  info: An old roguelike game, the ancestor of the famous game nethack.
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/hack.6?query=hack
+  info: Exploring The Dungeons of Doom.
   screencast:
   play: telnet or ssh on sdf.org
+
+- name: hangman (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/hangman.6?query=hangman
+  info: computer version of the game hangman.
+  screencast:
+  play:
 
 - name: hunt the wumpus (bsdgames)
   url:
@@ -429,7 +475,7 @@
   play: telnet or ssh on sdf.org
 
 - name: hunt (bsdgames)
-  url:
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/hunt.6?query=hunt
   info: The object of the game hunt is to kill off the other players. There are no rooms, no treasures, and no monsters. Instead, you wander around a maze, find grenades, trip mines, and shoot down walls and players.
   screencast:
   play: telnet or ssh on sdf.org
@@ -497,6 +543,11 @@
   info: Imperium is a game of intergalactic exploration, warfare, and economics. Imperium has no set goal, and fairly flexible rules about what you can do, thus, while a single player could run their own game just for the fun of exploration, they would be missing out on most of the aspects of the game with no one to compete against.
   screencast:
 
+- name: larn (bsdgames)
+  url: http://netbsd.gw.com/cgi-bin/man-cgi/man?larn+6+NetBSD-current
+  info: exploring the caverns of Larn.
+  screencast:
+
 - name: liberal crime squad
   url: http://lcs.wikidot.com/start
   info: This is a very elaborated game where you have to fight with your friends against conservative laws.
@@ -560,6 +611,11 @@
   info: Micro Snake is based on a simple snake game by Simon Huggins.
   screencast:
 
+- name: mille (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/mille.6?query=mille
+  info: play Mille Bornes.
+  screencast:
+
 - name: miscom
   url: http://www.filewatcher.com/m/miscom.tar.gz.93995-0.html
   info: A curses-based game where you must defend cities from missile attack. It’s essentially a clone of Atari’s “Missile Command” (with some minor enhancements) for terminals, and has colour and sound.
@@ -575,9 +631,14 @@
   info: Moo (a.k.a. Mastermind) supervisor and a very powerful Moo player.
   screencast:
 
-- name: monoUSA
+- name: monousa
   url: http://www.filewatcher.com/m/monoUSA2.0.tgz.24322-0.html
   info: A sort of monopoly game. At least two players are needed.
+  screencast:
+
+- name: monop (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/monop.6?query=monop
+  info: Monopoly game.
   screencast:
 
 - name: moon-buggy
@@ -694,8 +755,8 @@
   screencast:
 
 - name: phantasia (bsdgames)
-  url:
-  info: A turn-based role-playing game.
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/phantasia.6?query=phantasia
+  info: an interterminal fantasy game.
   screencast:
 
 - name: pyro
@@ -725,14 +786,19 @@
   play: telnet or ssh on sdf.org # https://archive.org/details/msdos_Rogue_1983
 
 - name: robots (bsdgames)
-  url:
-  info: A game from the bsdgames collection. You have to avoid being killed by stupid robots.
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/robots.6?query=robots
+  info: fight off villainous robots.
   screencast:
   play: telnet or ssh on sdf.org
 
 - name: robotfindskitten
   url: http://robotfindskitten.org/
   info: Yet another zen simulation.
+  screencast:
+
+- name: sail (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/sail.6?query=sail
+  info: multi-user wooden ships and iron men.
   screencast:
 
 - name: seabattle
@@ -781,7 +847,7 @@
   screencast:
 
 - name: snake (bsdgames)
-  url: http://www.wurb.com/if/game/211
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/snake.6?query=snake
   info: A quick and easy turn-based survival game; you have to move without being caught by a snake.
   screencast:
   play: telnet or ssh on sdf.org
@@ -865,8 +931,8 @@
   screencast:
 
 - name: tetris (bsdgames)
-  url:
-  info: A clone of the tetris game.
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/tetris.6?query=tetris
+  info: the game of tetris.
   screencast:
 
 - name: tetris
@@ -923,6 +989,11 @@
 - name: trek73
   url: http://www.kermitmurray.com/trek73/
   info: An old but rather elaborated game inspired by the Star Trek series.
+  screencast:
+
+- name: trek (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/trek.6?query=trek
+  info: trekkie game.
   screencast:
 
 - name: trog
@@ -1044,10 +1115,15 @@
   screencast:
 
 - name: worm (bsdgames)
-  url:
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/worm.6?query=worm
   info: A version of the arcade game worm (sometimes called snake or nibbles).
   screencast:
   play: telnet on twenex.org
+
+- name: wump (bsdgames)
+  url: http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man6/wump.6?query=wump
+  info: hunt the wumpus in an underground cave.
+  screencast:
 
 - name: yahtzee
   url: http://www.filewatcher.com/m/yahtzee-src.tar.Z.15889-0.html
